illegal orientation vectors are dealt with more gracefully.

Created wrapBSDF tool and incorporated into genBSDF along
with new rfluxmtx computation.

Initial check-in of Roland Schregle's photon map integration.
New 5.0a version designation as suggested by Andy McNeil.

Added left-hand coordinate sytems to rfluxmtx to correct
problems with coordinate axis orientations pointed out by
David Geisler-Moroder.

Added color output to genBSDF (+C option) and support for
color rendering of Klems and tensor tree data.

Fixed another bug in rsensor that caused rays to be generated
on opposite side of hemisphere even where sensitivity was zero.

Fixed bug discovered by Jacob Jonsson in Klems BSDF
interpolator that caused it to over-predict normal
transmittance and reflectance.

Added ability to read input from commands in dctimestep
and rmtxop.

Added photon map support to rad.  Fixed some double-counting
issues in photon-mapping spotted by David Geisler-Moroder.

Added photon map support to trad.

Fixed bug in antimatter source testing when antimatter
definition follows potential obstructor in input.

Fixed issue with missing character type identifier at head
of genBSDF XML output.

Prompted by Roland S., added option to have pcompos -a order
rows from top rather than bottom of image.

Changed dctimestep to accept matrix as well as BTDF input
in the VTDs invocation mode.  This permits the output of
rmtxop to be used in a pinch when combining multiple BTDF
layers, although interreflection between layers is not
accounted for properly as it is in the WINDOW program.

Added Jan Wienold et al.'s evalglare to distribution.

Hopeful fix to deadlock issue under Mac OS X 10.10.x (Yosemite).

Fixed early exit of rcontrib with internal error (sample behind sender)
discovered by Rob G.

=================================
Version 5.1

Fixed issue with vchars.mta and symbols.mta not being installed in
the appropriate metafile library location, with help from Rob G.